new service created postservice and call post api register user into database and return json response ...

--- a/employee/src/app/app.component.html
+++ b/employee/src/app/app.component.html
@@ -1,6 +1,7 @@
 <p class="text-center">{{title}}</p>
 <div class="container">
-<app-employee-list></app-employee-list>
+<!-- <app-employee-list></app-employee-list> -->
+<app-post-employee></app-post-employee>
 </div>
 
 
