login component and service up and running

--- a/employee/src/app/app.component.html
+++ b/employee/src/app/app.component.html
@@ -1,7 +1,8 @@
 <p class="text-center">{{title}}</p>
 <div class="container">
 <!-- <app-employee-list></app-employee-list> -->
-<app-post-employee></app-post-employee>
+<!-- <app-post-employee></app-post-employee> -->
+<app-login></app-login>
 </div>
 
 
