final commit update header

--- a/employee/src/app/app.component.html
+++ b/employee/src/app/app.component.html
@@ -2,7 +2,9 @@
 <div class="container">
 <!-- <app-employee-list></app-employee-list> -->
 <!-- <app-post-employee></app-post-employee> -->
-<app-login></app-login>
+<app-header></app-header>
+<router-outlet></router-outlet>
+
 </div>
 
 
